--- a/resources/assets/styles/layouts/_single.scss
+++ b/resources/assets/styles/layouts/_single.scss
@@ -261,7 +261,7 @@
     .post,
     .page-card,
     .regidor {
-      --card-padding: 1.5rem;
+      --card-padding: 1.5rem !important;
     }
 
     .entry-header {
